--- a/js/app/layout/nav-bar.html
+++ b/js/app/layout/nav-bar.html
@@ -1,19 +1,23 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+<nav class="navbar navbar-default navbar-fixed-top" ng-controller="LayoutCtrl as vm">
+    <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle" ng-click="vm.isCollapsed = !vm.isCollapsed" aria-expanded="true">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/home">Baseball Score Keeper</a>
+            <a class="navbar-brand" href="#/">Baseball Score Keeper</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+
+        <div class="navbar-collapse collapse in" collapse="vm.isCollapsed" aria-expanded="true">
             <ul class="nav navbar-nav">
-                <li><a href="#/newgame">New Game</a></li>
-                <li><a href="#/game">Resume Game</a></li>
-                <li><a href="#/reset">Reset</a></li>
+                <li><a href="#/newgame" ng-click="vm.isCollapsed = !vm.isCollapsed">New Game</a>
+                </li>
+                <li><a href="#/game" ng-click="vm.isCollapsed = !vm.isCollapsed">Resume Game</a>
+                </li>
+                <li><a href="#/reset" ng-click="vm.isCollapsed = !vm.isCollapsed">Reset</a>
+                </li>
             </ul>
         </div>
     </div>
