Adding a team editor feature (not complete)

--- a/js/app/layout/nav-bar.html
+++ b/js/app/layout/nav-bar.html
@@ -16,7 +16,9 @@
                 </li>
                 <li><a href="#/game" ng-click="vm.isCollapsed = !vm.isCollapsed">Resume Game</a>
                 </li>
-                <li><a href="#/reset" ng-click="vm.isCollapsed = !vm.isCollapsed">Reset</a>
+                <li><a href="#/reset" ng-click="vm.isCollapsed = !vm.isCollapsed">Reset Game</a>
+                </li>
+                <li><a href="#/team" ng-click="vm.isCollapsed = !vm.isCollapsed">New Team</a>
                 </li>
             </ul>
         </div>
