--- a/js/app/layout/home.html
+++ b/js/app/layout/home.html
@@ -1,5 +1,5 @@
-<heading>Baseball Score Keeper</heading>
+<header>Baseball Score Keeper</header>
 <section>
     <p>A fictitious baseball score keeping application / game.</p>
-    <a class="btn btn-info" href="#/newgame" role="button">Start a New Game!</a>
+    <a class="btn btn-primary btn-lg btn-block" href="#/newgame" role="button">Start a New Game!</a>
 </section>
